--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://shubhampar.github.io",
-  "name": "my-portfolio",
+  "homepage": "https://github.com/Shubhampar",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
